# shopmetactl

./: README.md  pyproject.toml
shopmeta/: cli.py  config.py  search.py  shopify.py  tui.py
